# python-100-examples-runoob-com

./: README.md  count_vowel_substrings.js  count_vowel_substrings.py  main.py  numpy-demo.py  package.json  pnpm-lock.yaml  pnpm-rsbuild.py  pyproject.toml
example1/: READM.md  permute.py  permute.test.js
example10/: 10.py  README.md
example11/: 11.py  README.md
example12/: 12.py  README.md
example13/: 13.py  README.md
example14/: 14.py  README.md
example15/: 15.py  README.md
example16/: README.md
example17/: 17.py  README.md
example18/: 18.py  README.md
example19/: README.md
example2/: README.md  bonus.py
example20/: README.md
example3/: README.md  perfect_square.py
example4/: README.md  which_day.py
example5/: README.md  sort-input-3-numbers-asc.py
example6/: README.md  fibonacci-sequence.py
example7/: README.md  copy-list.py
example8/: 9_times_9_table.py  README.md
example9/: 9.py  README.md
helpers/: gen-example-template.py  my_timeit.py  timer.py
python-100-days/day78/: README.md  bar.py  chinese-and-emoji.py  font.py  hist.py  pie.py  scatter.py  sin-cos-1.py  sin-cos-3.py  sin-cos-subplot.py
python-100-days/day79/: radar.py
python-100-days/day80/: seaborn1.py
python-100-days/day81/: income-shopping-2.py  income-shopping.py  ml.py  normal-distribution.py  sigmoid.py  softmax-3d.py  softmax.py
python-100-days/day82/: knn.py
